add post-build event
1) copy dll to output folder
2) remove useless files in respository

--- a/.gitignore
+++ b/.gitignore
@@ -53,11 +53,12 @@ Temporary Items
 *.log
 *.opensdf
 *.con
-/AutoTrader/*.con
-AutoTrader/QueryRsp.con
-AutoTrader/DialogRsp.con
+AutoTrader/*.con
+AutoTrader/*.json
+AutoTrader/*.ini
+AutoTrader/x64/*
+AutoTrader/*.aps
+x64/*
 *.con
 *.con
-AutoTrader/DialogRsp.con
-/AutoTrader/*.json
-/AutoTrader/*.ini
+
