--- a/src/AutoTrader/CMakeLists.txt
+++ b/src/AutoTrader/CMakeLists.txt
@@ -1,16 +1,12 @@
 message(STATUS "AutoTrader cmake running")
 
-
 SET(EXECUTABLE_OUTPUT_PATH ${AUTOTRADE_SOURCE_DIR}/bin)
-
-SET(PLATFORM x64)
 
 SET(SRC_LIST	AutoTrader.cpp 
 			 	AP_Mgr.cpp 
 				BOLLTech.cpp
 				CommonUtils.cpp
 				config.cpp
-				ctpworker.cpp
 				DBWrapper.cpp
 				InstrumentInfoMgr.cpp
 				KData.cpp
@@ -25,7 +21,6 @@ SET(SRC_LIST	AutoTrader.cpp
 				stdafx.cpp
 				TechUtils.cpp
 				TickWrapper.cpp
-				traderspi.cpp
 				tradespi.cpp
 				MACrossBOLLStrategy.cpp
 				MACrossBOLLTech.cpp
@@ -34,9 +29,9 @@ SET(SRC_LIST	AutoTrader.cpp
 			 	EMACrossStratgy.cpp
 			 	WMACrossStratgy.cpp )
 
-INCLUDE_DIRECTORIES(${AUTOTRADE_SOURCE_DIR}/include ${AUTOTRADE_SOURCE_DIR}/src/lib_json/include)
+INCLUDE_DIRECTORIES(${HEADER_INCLUDE_DIR} ${AUTOTRADE_SOURCE_DIR}/src/lib_json/include)
 
-LINK_DIRECTORIES(${AUTOTRADE_SOURCE_DIR}/lib ${EXECUTABLE_OUTPUT_PATH})
+LINK_DIRECTORIES(${LINK_LIB_DIR} ${EXECUTABLE_OUTPUT_PATH})
 
 ADD_EXECUTABLE(AutoTrader ${SRC_LIST})
 
